--- a/2. 타임리프-스프링 통합과 폼/실습/form/build.gradle
+++ b/2. 타임리프-스프링 통합과 폼/실습/form/build.gradle
@@ -1,17 +1,12 @@
 plugins {
+	id 'org.springframework.boot' version '2.4.4'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'org.springframework.boot' version '3.2.8'
-	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
+sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -29,9 +24,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
