--- a/6. 로그인 처리1-쿠키, 세션/실습/login/src/main/resources/application.properties
+++ b/6. 로그인 처리1-쿠키, 세션/실습/login/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.messages.basename=messages,errors
 #URL ?? ??? ?? ?? ??? ???? ??? ???? ??? ?? ??? ???? ?
 server.servlet.session.tracking-modes=cookie
+server.servlet.session.timeout=60
