--- a/11. 파일 업로드/실습/upload/src/main/resources/application.properties
+++ b/11. 파일 업로드/실습/upload/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=upload
+# HTTP ?? ??? ?? ??
+logging.level.org.apache.coyote.http11=trace
+# ??? ??? ??
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+# spring.servlet.multipart.enabled=true ??? ?? ???? DispatcherServlet?? ???? ???? ???
+spring.servlet.multipart.enabled=true
